added ID Main and title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
-    <p>hello world</p>
-    <p>neew line</p>
+<body id='main'>
+    <header>
+        <section id="title">
+            
+        </section>
+    </header>er
+</body>
 </html>
