--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
     <header>
         <section id="title">
          <div id="img-div">
-             <img src="https://www.biography.com/.image/t_share/MTE4MDAzNDEwNzg5ODI4MTEw/barack-obama-12782369-1-402.jpg" id="image">
-
+             <img src="https://www.biography.com/.image/t_share/MTE4MDAzNDEwNzg5ODI4MTEw/barack-obama-12782369-1-402.jpg" id="image" / alt="barak Hussein obama is an american politician">
+                <p for="image" id="image-label"><em>
+                    barak Hussein obama is an american politician and attorney who served as the 44th president of the United States from 2009 to 2017.
+                </em></p>
          </div>   
         </section>
-        
     </header>er
+
+    <main>
+      <hr/>
+      <article id="tribute" class="text-content">
+          <p><em>"We thank Barack Obama for his service and for showing us how to bring out the best in ourselves."</em></p>
+          <p>--American President Barak Obama</p>
+      </article>  
+    </main>
 </body>
 </html>
