added the article

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <hr/>
       <article id="tribute" class="text-content">
           <p><em>"We thank Barack Obama for his service and for showing us how to bring out the best in ourselves."</em></p>
-          <p>--American President Barak Obama</p>
+          <p>--American President Barak Obama.</p>
       </article>  
     </main>
 </body>
