added the css code

--- a/index.html
+++ b/index.html
@@ -1,57 +1,39 @@
-<div class="container-fluid hero-section">
-  <div class="row">
-    <div class="col-xs-6 hero-content">
-      <h1>Mahatma Gandhi</h1>
-      <h2>The man who gave India freedom</h2>
-        <div class="caption small-screen-invisible">Mahamta is seen here spinning his wheel to make his own cotton clothes.  He always advised Indian people to be self reliant.
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<html>
+<body id='main'>
+    <header>
+        <section id="title">
+         <div id="img-div">
+          <figure>
+             <img id="image" src="https://www.biography.com/.image/t_share/MTE4MDAzNDEwNzg5ODI4MTEw/barack-obama-12782369-1-402.jpg" alt="barak Hussein obama is an american politician">
+            
+             <figcaption id="img-caption">Change will not come if we wait for some other person or some other time. We are the ones we've been waiting for. We are the change that we seek.
+              Read more at https://www.brainyquote.com/authors/barack-obama-quotes
+            </figcaption>
+            </figure>        
+                 <p for="image" id="image-label"><em>
+                    barak Hussein obama is an american politician and attorney who served as the 44th president of the United States from 2009 to 2017.
+                </em></p>
+                <p id="tribute-info">Hope and change. With those words, eight years ago, 
+                America ushered in a remarkable period in our history.
+                 Barack Obama, a black man, won the presidency in a country where slavery
+                  and racism were incorporated into the nation’s Constitution and social fabric. 
+        </section>
+    </header>er
+
+    <main>
+      <hr/>
+      <article id="tribute" class="text-content">
+          <p><em>"We thank Barack Obama for his service and for showing us how to bring out the best in ourselves."</em></p>
+          <p>--American President Barak Obama. and the</p>
+      </article>  
+      <hr/>
+    </main>
+    <footer>
+        <div id="footer-content">
+          <secion>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Barack_Obama#:~:text=listen)%20b%C9%99%2DRAHK%20hoo%2D,president%20of%20the%20United%20States.&text=Obama%20was%20born%20in%20Honolulu%2C%20Hawaii." id="tribute-link" target="_blank">Wikipedia entry</a>.
+          </section>
         </div>
-     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12 text-center">
-    <a href="#life-story"><i id="hero-button" class="fa fa-chevron-circle-down fa-3x" aria-hidden="true"></i></a>
-    </div>
-  </div>
-</div>
-<div class="container main">
-  <div class="row">
-    <div class="col-xs-12 col-md-8 col-md-offset-2">
-    <h3 id="life-story">Here's a time line of Mahatma's life:</h3>
-    <ul class="">
-      <li><strong>1869</strong> - Born at Porbandar, India</li>
-      <li><strong>1883</strong> - Got married to Kasturba Makhandas Kapadia at a young age of 13, as per the prevalent regional custom at that time.</li>
-      <li><strong>1888</strong> - Dropped out of college and left to study law at London. His family was against his decision to move to london for studying law. They feared that he would abandon his religion and family after going to Britain. But he dissuaded them by taking a vow that he would abstain from meat,alcohol and women during his stusies there. He kept his words.</li>
-      <li><strong>1891</strong> - Graduated as a Barrister from London and returned to India. Tried to establish a law business at the then Bombay for 2 years but failed.  </li>
-      <li><strong>1893</strong> - Went to South Africa to work as a lawyer for a shipping company. He spent 21 years in South Africa. This period turned out to be the turning point in his life. After suffering the atrocious racist regime first hand, he took up the cause of fellow Indians and tought them to fight back by using non-violent means.</li>
-      <li><strong>1906</strong> - Launched his idea of Satyagraha or <em>They way of the Truth</em> to protest against a new law requiring compulsory registraion of Indians and Chinese.</li>
-  <li><strong>1915</strong> - Returned to India and joined the Indian National Congress. His orientation to Indian political situation, Indian people and their issues happened under the tutelage of Gopal Krishna Gokhale.</li>
-  <li><strong>1917</strong> - His first major achievement came during the Champaran peasants movement of Bihar. Gandhi squeezed out much of the demands of the peasants from the British authorities after successfully leading a popular non-violent agitation.</li>
-  <li><strong>1930</strong> - Gandhi organised the famous Salt March to Dandi from 12 March to 6 April, where he marched 388 kilometres (241 mi) from Ahmedabad to Dandi, Gujarat to make salt himself. Thousands of Indians joined him on this march to the sea. This campaign was one of his most successful at upsetting British hold on India; Britain responded by imprisoning over 60,000 people.</li>
-  <li><strong>1942</strong> - Gave a speech calling for the British to quit India for good. This speech was the precursor to the most powerful yet non-violent Quit India movement against the British colonial oppession in India. The British rulers understood that they must cede powers slowly and allow the Indians to self-rule.</li>
-      <li><strong>1944</strong> - He was given the popular title of <em>the father of the nation</em> by another legendary revolutionary Subhash Chandra Bose from a radio broadcast from Singapore.</li>
-      <li><strong>1947</strong> - India became independent of the British rule.</li>  
-  <li><strong>1949</strong> - Mahatma was assasinated by Nathuram Godse.</li>
-    </ul>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12 col-md-8 col-md-offset-2">
-    <blockquote>    
-"In my life I have always looked to Mahatma Gandhi as an inspiration, because he embodies the kind of transformational change, that can me made when ordinary people come together to do extraordinary things."
-      <footer>
-Barack Obama,  44th President of the United States. 
       </footer>
-    </blockquote>
-  </div>
-  <div class="col-xs-12 col-md-8 col-md-offset-2">
-    <h4>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Mahatma_Gandhi" target="_blank">Wikipedia entry</a>.
-</h4>
-  </div>
-</div>
-</div>
-<div class="container">
-  <hr>
-  <footer class="text-center">
-    A tribute to the great Mahatma Gandhi by <a href="https://www.freecodecamp.org/debu2code" target="_blank">Deb Banerjee</a>
-  </footer>
- </div>
+</body>
+</html>
