--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <body id='main'>
     <header>
         <section id="title">
-            
+         <div id="img-div">
+             <img src="https://www.biography.com/.image/t_share/MTE4MDAzNDEwNzg5ODI4MTEw/barack-obama-12782369-1-402.jpg" id="image">
+
+         </div>   
         </section>
+        
     </header>er
 </body>
 </html>
